<resources>
    <string name="app_name">Student Announcement System</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="image_logo">Image Logo</string>

    <!-- For Facebook -->
    <string name="facebook_app_id">373193634017944</string>
    <string name="fb_login_protocol_scheme">fb373193634017944</string>
    <string name="title_activity_home_page">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Prashant Agheda</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Edit Profile</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="announcements_system_using_firebase_and_android">Announcements System using Firebase and Android</string>
    <string name="name">Name :</string>
    <string name="roll_no">Roll No :</string>
    <string name="address">Address :</string>
    <string name="course">Course :</string>
    <string name="semester">Semester :</string>
    <string name="stream">Stream :</string>
    <string name="update_profile_data"> Update Profile Data </string>

</resources>